[gd_scene load_steps=7 format=1]

[ext_resource path="res://Trajektoria/sprites/ground.png" type="Texture" id=1]
[ext_resource path="res://Trajektoria/scripts/Target.gd" type="Script" id=2]
[ext_resource path="res://Trajektoria/sprites/target.png" type="Texture" id=3]
[ext_resource path="res://Trajektoria/scripts/Shooter.gd" type="Script" id=4]
[ext_resource path="res://Trajektoria/sprites/armata.png" type="Texture" id=5]
[ext_resource path="res://Trajektoria/scripts/Inputs.gd" type="Script" id=6]

[node name="root" type="Node"]

[node name="Ground" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 510, 520 )
transform/scale = Vector2( 1.05, 1 )

[node name="Sprite" type="Sprite" parent="Ground"]

texture = ExtResource( 1 )

[node name="target" type="Node2D" parent="."]

transform/pos = Vector2( 900, 420 )
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="target"]

transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="gun" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 50, 420 )
script/script = ExtResource( 4 )

[node name="Sprite_gun" type="Sprite" parent="gun"]

transform/scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 20.0
margin/right = 60.0
margin/bottom = 34.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bullets" type="Node" parent="."]

[node name="ChangesController" type="Node" parent="."]

script/script = ExtResource( 6 )

[node name="BulletVelocity" type="HSlider" parent="ChangesController"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 20.0
margin/right = 20.0
margin/bottom = 50.0
range/min = 50.0
range/max = 1200.0
range/step = 1.0
range/page = 0.0
range/value = 115.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="BulletVelocityLabel" type="Label" parent="ChangesController"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 444.0
margin/top = 20.0
margin/right = 344.0
margin/bottom = 34.0
text = "Bullet velocity: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GunHeight" type="HSlider" parent="ChangesController"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 110.0
margin/right = 20.0
margin/bottom = 140.0
range/min = 0.0
range/max = 200.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="GunHeightLabel" type="Label" parent="ChangesController"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 444.0
margin/top = 110.0
margin/right = 341.0
margin/bottom = 124.0
text = "Gun height: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TargetPosition" type="HSlider" parent="ChangesController"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 80.0
margin/right = 20.0
margin/bottom = 110.0
range/min = 50.0
range/max = 950.0
range/step = 1.0
range/page = 0.0
range/value = 700.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="TargetPositionLabel" type="Label" parent="ChangesController"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 444.0
margin/top = 80.0
margin/right = 341.0
margin/bottom = 94.0
text = "Target position: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GravityLabel" type="Label" parent="ChangesController"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 444.0
margin/top = 50.0
margin/right = 344.0
margin/bottom = 64.0
text = "Gravity: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Gravity" type="HSlider" parent="ChangesController"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 50.0
margin/right = 20.0
margin/bottom = 80.0
range/min = 1.0
range/max = 50.0
range/step = 0.2
range/page = 0.0
range/value = 9.8
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="NoReach" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 0.0
margin/right = -28.0
margin/bottom = -14.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


